# dsenv

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  dsenv.py  pyproject.toml  requirements-dev.txt  test.env  tox.ini
.github/workflows/: tests.yml
tests/: test_dsenv.py
