[build-system]
requires = ["setuptools>=47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsenv"
version = "0.1.0"
description = "Damn Simple Environ Vars"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["tox>=4.0", "twine>=4.0"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
