[build-system]
requires = ["setuptools>=47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsenv"
version = "0.1.1"
description = "Damn Simple Environ Vars"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Marcin Nowak", email = "marcin.j.nowak@gmail.com"},
]
keywords = ["environment variables", "deployments", "settings", "env", "dotenv", "configurations", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Utilities",
  "Topic :: System :: Systems Administration",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/marcinn/dsenv"
Repository = "https://github.com/marcinn/dsenv"
Issues = "https://github.com/marcinn/dsenv/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["tox>=4.0", "twine>=4.0"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=prepend"
testpaths = ["tests"]
